--- a/css/layout.css
+++ b/css/layout.css
@@ -3,6 +3,7 @@ body {
     background-color: #AFC8DD;
     height: 100%;
     min-width: 200px;
+    font-family: sans-serif;
 }
 
 .layout__header {
@@ -19,7 +20,7 @@ body {
 }
 
 .nav {
-    width: 30%;
+
 }
 
 .nav__items-list {
@@ -45,10 +46,7 @@ body {
 }
 
 .logo {
-    width: 40%;
-    padding: 0 5%;
     flex: 1;
-    text-align: center;
 }
 
 .logo__link {
