--- a/css/not-found.css
+++ b/css/not-found.css
@@ -1,38 +1,32 @@
 .not-found {
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .not-found__wrapper {
     width: 100%;
     padding: 0 10px;
     color: #445a6f;
+    text-align: center;
 }
 
 .not-found__title {
     font-size: 200px;
     font-weight: 700px;
     color: #445a6f;
-    text-align: center;
 }
 
 .not-found__sub-title {
     padding-bottom: 10px;
-    text-align: center;
     font-size: 30px;
     font-weight: 600;
 }
 
 .not-found__text {
-    text-align: center;
-    font-size: 20px;
     padding-bottom: 10px;
-}
-
-.btn-home-wrapper {
-    text-align: center;
+    font-size: 20px;
 }
 
 .btn-home {
@@ -42,4 +36,18 @@
 
 .btn-home:hover {
     color: rgb(274, 115, 150);
+}
+
+@media only screen and (min-width: 0) and (max-width: 399px) {
+    .not-found__title {
+        font-size: 150px;
+    }
+
+    .not-found__sub-title {
+        font-size: 20px;
+    }
+
+    .not-found__text {
+        font-size: 15px;
+    }
 }
